--- a/ShellTrasferServer/ShellTrasferServer.csproj
+++ b/ShellTrasferServer/ShellTrasferServer.csproj
@@ -64,6 +64,9 @@
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
+    <Compile Include="ShellTask.cs" />
+    <Compile Include="TaskType.cs" />
+    <Compile Include="TransferTask.cs" />
     <Compile Include="UserClientManager.cs" />
     <Compile Include="UserFileManager.cs" />
     <Compile Include="UserTaskQueue.cs" />
