--- a/ShellTrasferServer/ShellTrasferServer.csproj
+++ b/ShellTrasferServer/ShellTrasferServer.csproj
@@ -61,9 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extentions.cs" />
-    <Compile Include="IService1.cs" />
+    <Compile Include="IShellTrasferServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="ShellTrasferServer.cs" />
     <Compile Include="ShellTask.cs" />
     <Compile Include="TaskType.cs" />
     <Compile Include="TransferTask.cs" />
