--- a/ShellTrasferServer/ShellTrasferServer.csproj
+++ b/ShellTrasferServer/ShellTrasferServer.csproj
@@ -85,32 +85,32 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveShell.cs" />
-    <Compile Include="ActiveShellPassiveshell.cs" />
-    <Compile Include="AtomicOperation.cs" />
-    <Compile Include="ClientManager.cs" />
-    <Compile Include="DownloadRequest.cs" />
-    <Compile Include="Extentions.cs" />
-    <Compile Include="FileMannager.cs" />
-    <Compile Include="IActiveShell.cs" />
-    <Compile Include="IActiveShellPassiveshell.cs" />
-    <Compile Include="IAletCallBack.cs" />
-    <Compile Include="ICallBack.cs" />
-    <Compile Include="IPassiveShell.cs" />
-    <Compile Include="IRestService.cs" />
-    <Compile Include="PassiveShell.cs" />
+    <Compile Include="Interface implementation\ActiveShell.cs" />
+    <Compile Include="Interface implementation\ActiveShellPassiveshell.cs" />
+    <Compile Include="Helpers\AtomicOperation.cs" />
+    <Compile Include="Data\ClientManager.cs" />
+    <Compile Include="Data\DownloadRequest.cs" />
+    <Compile Include="Helpers\Extentions.cs" />
+    <Compile Include="Data\FileMannager.cs" />
+    <Compile Include="Interfaces\IActiveShell.cs" />
+    <Compile Include="Interfaces\IActiveShellPassiveshell.cs" />
+    <Compile Include="Interfaces\IAletCallBack.cs" />
+    <Compile Include="Interfaces\ICallBack.cs" />
+    <Compile Include="Interfaces\IPassiveShell.cs" />
+    <Compile Include="Interfaces\IRestService.cs" />
+    <Compile Include="Interface implementation\PassiveShell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteFileInfo.cs" />
-    <Compile Include="RestService.cs" />
-    <Compile Include="AletCallBack.cs" />
-    <Compile Include="ShellTask.cs" />
-    <Compile Include="TaskQueue.cs" />
-    <Compile Include="TaskType.cs" />
-    <Compile Include="TransferTask.cs" />
-    <Compile Include="UserAtomicOperation.cs" />
-    <Compile Include="UserClientManager.cs" />
-    <Compile Include="UserFileManager.cs" />
-    <Compile Include="UserTaskQueue.cs" />
+    <Compile Include="Data\RemoteFileInfo.cs" />
+    <Compile Include="Interface implementation\RestService.cs" />
+    <Compile Include="Interface implementation\AletCallBack.cs" />
+    <Compile Include="Data\ShellTask.cs" />
+    <Compile Include="Data\TaskQueue.cs" />
+    <Compile Include="Data\TaskType.cs" />
+    <Compile Include="Data\TransferTask.cs" />
+    <Compile Include="Data\UserAtomicOperation.cs" />
+    <Compile Include="Data\UserClientManager.cs" />
+    <Compile Include="Data\UserFileManager.cs" />
+    <Compile Include="Data\UserTaskQueue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -124,6 +124,7 @@
       <Name>WcfLogger</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
