Changed the wait mechanism on EnqueueWaitAndReturnBaseLine from busy wait to condition var sience the operation can take some time and the processor working too hard

--- a/ShellTrasferServer/ShellTrasferServer.csproj
+++ b/ShellTrasferServer/ShellTrasferServer.csproj
@@ -85,6 +85,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ActiveClientLocks.cs" />
+    <Compile Include="Data\ShellTaskLockManager.cs" />
     <Compile Include="Interface implementation\ActiveShell.cs" />
     <Compile Include="Interface implementation\ActiveShellPassiveshell.cs" />
     <Compile Include="Helpers\AtomicOperation.cs" />
