Added configuration manager in order to handle the connection string. Now the connection string is in App.config

--- a/DBManager/DBManager.csproj
+++ b/DBManager/DBManager.csproj
@@ -60,6 +60,7 @@
       <HintPath>..\packages\PostSharp.Patterns.Threading.Redist.5.0.52\lib\net45\PostSharp.Patterns.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
